# omni-randomwalk

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: verify.yml
src/: lib.rs  random_cordinates.rs  walk_app.rs
