[package]
name = "omni-randomwalk"
version = "0.0.3"
edition = "2021"
description = "omni-randomwalk"
license = "Apache-2.0"
keywords = ["frontend"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.0"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
